	12213 Glittering_Wand:		Simple script to ensure weight is 0 and then resets characters skills.	
	7621 Token_of_Ziegfried:	Revive player on death (if item is in inventoy? Needs a clearer description)

	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw:		Need correct HIT and ASPD Rate
========================
08/14
	* Rev. 11015 Added Autocast of Greed to Lesser Elemental Ring. [L0ne_W0lf]
	* Rev. 11011 Changed the rest of the Western_Outlaw bonus. (/3 -> /6) [L0ne_W0lf]
	* Rev. 11010 Added bonus for Hunter_Earring, as well as it's DEF bonus. [L0ne_W0lf]
	* Changed ASPD bonus for Western Outlaw at Playtester's request.
	* Rev. 11007 Implemented bonuses for several 11.3 equips. [L0ne_W0lf]
	- Corrected Wolfhedin and Mithril Magic Mant. so they trigger properly.
	- Added Several more cash shop items, granted a lot of them don't work.
	- Added new headgear, using trans. proj. and some info care of Luanus. 
	- Corrected effects for blessing and Inc AGI scrolls.
	* Small updates to the item trade database. 
	- Commented out Skull_ and organized it a bit better.
	* Small update to create_arrow_db.txt.
	* Implemented Wolfhedin and Mithril Magic Manteau [Playtester]
	* Fixed the damage area of the "path damage" skills [Playtester]
	* Fixed some entries in the mob_skill_db [Playtester]
08/13
	* Uncommented the 'new' npc skills from mob_skill_db as they are
	  implemented now. [Skotlex]
	* Fixed some typos thanks to Christian [Playtester]
	- also reduced aftercast delay of NJ_ISSEN
08/12
	* Resolved some issues mentioned above [Playtester]
	* Updated the mapcache with data for moscovia maps
	* Removed "Crusader quest monsters" from mob_avail (not used anymore)
	* Replaced some mob_avail.txt entries with a simple example entry [ultramage]
08/11
	* Added remaining 11.2 skill db entries [Playtester]
	* Implemented 11.2 skills in the skill_db [Playtester]